# ani2hyprexperiment

./: Cargo.toml  add_missing_links.sh  create_koosh_animated_fix.sh  create_koosh_hyprcursor.sh  rename_koosh_cursors_absolute.sh
src/: cursor_mapping.rs  lib.rs  main.rs  theme_config.rs
src/commands/: add_links.rs  create_animated.rs  create_hyprcursor.rs  mod.rs  rename_cursors.rs
