[package]
name = "koosh-cursor-tools"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Koosh cursor theme management tools"

[[bin]]
name = "koosh-cursor-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.4"
regex = "1.10"
home = "0.5"
